# ebpf-wasm-experimental

./: .gitignore  Cargo.toml
ebpf-wasm/capable/ebpf/: Cargo.toml  build.rs
ebpf-wasm/capable/ebpf/src/: main.rs  wasm.rs
ebpf-wasm/capable/ebpf/src/bpf/: Makefile  capable.bpf.c  capable.h
ebpf-wasm/capable/wasm/: Cargo.toml
ebpf-wasm/capable/wasm/.cargo/: config.toml
ebpf-wasm/capable/wasm/src/: lib.rs
ebpf-wasm/net-trace/: Dockerfile  ds.yaml
ebpf-wasm/net-trace/ebpf/: Cargo.toml
ebpf-wasm/net-trace/ebpf/src/: main.rs  wasm.rs
ebpf-wasm/net-trace/ebpf/src/bpf/: Makefile  nettrace.bpf.c  nettrace.h
ebpf-wasm/net-trace/wasm/: Cargo.toml
ebpf-wasm/net-trace/wasm/src/: lib.rs  nettrace.rs
ebpf/capable/src/: main.rs
ebpf/execsnoop/: Cargo.toml
ebpf/execsnoop/src/: execsnoop_h.rs  main.rs
ebpf/execsnoop/src/bpf/: execsnoop  execsnoop.h
ebpf/xdp-proxy/: Cargo.toml
ebpf/xdp-proxy/src/: main.rs  net.rs  xdp_proxy.rs
ebpf/xdp-proxy/src/bpf/: Makefile  xdp-proxy.bpf.c  xdp-proxy.h
